<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Task1PositionLogger</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="distance">Distance:</string>
    <string name="speed">Average Speed:</string>
    <string name="start">Start Service</string>
    <string name="stop">Stop Service</string>
    <string name="update">Update Values</string>
    <string name="exit">Exit</string>

</resources>
