<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    
    <TableLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1">
    <TableRow>
        <TextView
            android:text="@string/latitude"
            android:padding="3dip" />
        <TextView
            android:text=""
            android:gravity="right"
            android:padding="3dip" android:id="@+id/latitude_text"/>
    </TableRow>
   <TableRow>
        <TextView
            android:text="@string/longitude"
            android:padding="3dip" />
        <TextView
            android:text=""
            android:gravity="right"
            android:padding="3dip" android:id="@+id/longitude_text"/>
    </TableRow>
   <TableRow>
        <TextView
            android:text="@string/distance"
            android:padding="3dip" />
        <TextView
            android:text=""
            android:gravity="right"
            android:padding="3dip" android:id="@+id/distance_text"/>
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/speed"
            android:padding="3dip" />
        <TextView
            android:text=""
            android:gravity="right"
            android:padding="3dip" android:id="@+id/avg_speed_text"/>
    </TableRow> 
</TableLayout>
    
<Button android:id="@+id/start_service_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start" />
<Button android:id="@+id/stop_service_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop" />
<Button android:id="@+id/update_values_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update" />            
 <Button android:id="@+id/exit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit" />
               
</LinearLayout>